<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/primaryLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="thejsh.threetwenty.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/timeRemain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EEE"
            android:layout_gravity="center"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/timeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#999"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"/>

    </LinearLayout>

    <Button
        android:id="@+id/centerButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_ripple"/>

    <!-- This is horrible and I'm sorry -->
    <View
        android:id="@+id/rippleCover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/circular_background"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:indeterminate="false"
        android:scaleX="-1"
        android:max="2000"
        android:progress="0"
        android:progressDrawable="@drawable/circular"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:id="@+id/infoText"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:textColor="#999"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message1_1"
            android:id="@+id/message1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="32dp"
            android:textSize="40sp"
            android:fontFamily="sans-serif-light"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message2_1"
            android:id="@+id/message2"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="32dp"
            android:textSize="40sp"
            android:fontFamily="sans-serif-light"
            android:visibility="invisible" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/settingsButton"
            android:layout_gravity="top|center_horizontal"
            android:background="@drawable/ic_settings_white_24dp"
            android:layout_margin="8dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

</FrameLayout>
